--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -3,6 +3,8 @@ name: "SmallWindow21 Production Deploy"
 on:
   push:
     branches: [ main ]
+  pull:
+    branches: [ main ]
 
 jobs:
   build-application:
