--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,10 +2,10 @@ name: "SmallWindow21 Production Deploy"
 
 on:
   push:
-    #branches: [ main ]
+    branches: [ main ]
   
-  jobs:
-  build-application:
+jobs:
+   build-application: 
     name: "Build Application"
     runs-on: ubuntu-latest
     steps:
